# esp32-air-quality-mqtt-gps

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  nginx.conf  partitions.csv  sdkconfig
backend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  server.js
backend/config/: confidentialMQTT.js  database.js  mqtt.js
backend/routes/: dataRoutes.js
backend/services/: sensorService.js  sensorServiceConfidential.js
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: DailyChartBar.jsx  Helper.jsx  Map.jsx  SideList.jsx  StaticStation.jsx  TimeRangeSlider.jsx
main/: CMakeLists.txt  i2c_hm3301.c  i2c_hm3301.h  main.c  uart_gps.c  uart_gps.h
main/components/: god_header.h  led.c  led.h  system_event_code.h  system_event_mask.c
main/components/gps/: uart_gps.c  uart_gps.h
main/components/network/ble/: ble_gatts.c  ble_gatts.h
main/components/network/mqtt/: mqtt_client.c
main/components/network/mqtt/network/: mqtt_client.h
main/components/network/wifi/: wifi_conn.c  wifi_conn.h
main/components/pm_sensors/: i2c_hm3301.c  i2c_hm3301.h
main/components/storage/: storage.c
main/components/storage/include/: storage.h
main/connection/: ble_gatts.c  ble_gatts.h  conn_thread.c  conn_thread.h  wifi_conn.c  wifi_conn.h
main/connection/mqtt/: conn_mqtt_client.h  mqtt_client.c
